Demo of binding to DateOnly property with DatePicker using a converter

--- a/MauiLayouts/MauiLayouts.csproj
+++ b/MauiLayouts/MauiLayouts.csproj
@@ -63,6 +63,9 @@
 	  <MauiXaml Update="Pages\GridDemoPage.xaml">
 	    <Generator>MSBuild:Compile</Generator>
 	  </MauiXaml>
+	  <MauiXaml Update="Pages\MarginSpacingPaddingDemoPage.xaml">
+	    <Generator>MSBuild:Compile</Generator>
+	  </MauiXaml>
 	  <MauiXaml Update="Pages\StackDemoPage.xaml">
 	    <Generator>MSBuild:Compile</Generator>
 	  </MauiXaml>
